--- a/style.css
+++ b/style.css
@@ -378,6 +378,21 @@ h4 {
 }
 
 /* Слайдер */
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .slider {
   max-width: 100rem;
   height: 50rem;
@@ -392,7 +407,7 @@ h4 {
   top: 0;
   width: 100%;
   height: 50rem;
-  opacity: 0;
+  /* opacity: 0; */
 
   display: flex;
   align-items: center;
@@ -414,7 +429,7 @@ h4 {
 
   border: none;
   background: rgba(255, 255, 255, 0.7);
-  font-family: inherit;
+  /* font-family: inherit; */
   color: #333;
   border-radius: 50%;
   height: 5.5rem;
